-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 4.11.1
-
None
-
-
2020wk32, 2020wk34, 2020wk36
In a project's run settings, the command line arguments field does not do the intended behavior. When arguments are specified, they are not passed to the application. This seems to be something missing from androiddeployqt, and also from Qt itself.
It seems Qt doesn't support passing command line arguments to an Android app or it cannot yet retrieve them because Android has a different way to pass those arguments via intent extras (see https://stackoverflow.com/a/22532487.)
The intent way to pass command-line arguments is not recommended in non-debug mode but was having issues for Qt 5.14+, but it has been already fixed in QTCREATORBUG-24155.
The arguments could be passed through the AndroidManifest.xml also with the following tag in <activity> section:
<meta-data android:name="android.app.arguments" android:value="arg1 arg2 arg3"/>
- is required for
-
QTBUG-72141 Qt for Android integration cannot be used for complex QML apps
-
- Closed
-
- relates to
-
QTCREATORBUG-24155 QML Tooling on Android fails
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-23712 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
310197,6 | Android: split arguments passed to the main app | dev | qt/qtbase | Status: MERGED | +2 | 0 |
310230,7 | Android: add option to get app arguments with AndroidManifest.xml | dev | qt/qtbase | Status: MERGED | +2 | 0 |
310243,2 | Android: add option to get app arguments with AndroidManifest.xml | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
312263,4 | Android: allow passing apps arguments via manifest on non-debug mode | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |